<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

	<TextView
	    android:id="@+id/phoneNumberLabel"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/phone" />
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text" />

    <Button
        android:id="@+id/contactsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickHandler"
        android:text="@string/contacts" />

    <TextView
	    android:id="@+id/messageLabel"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/message" />
    
    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text" />
    
     <TextView
	    android:id="@+id/numberLabel"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/number" />

    <EditText
        android:id="@+id/numberToSend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number" />
    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickHandler"
        android:text="@string/send" />

</LinearLayout>